# webqa-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  README_zh-CN.md  app.py  package.json  pyproject.toml  requirements.txt  webqa-agent.py
.github/: md-link-config.json
.github/workflows/: build-and-push.yml  workflow.yml
app_gradio/: __init__.py  demo_gradio.py  gradio_i18n.json
backend/: BACKEND_ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  env.example  gen_webqa.py  init.sql  requirements.txt  run.py  run_webqa.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
config/: config.yaml.example  config_case.yaml.example  config_run.yaml.example
deploy/: README.md  README_zh-CN.md
deploy/docker-compose/: .env.example  docker-compose.yml  start.sh
deploy/k8s/: README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  (+7 more)
docs/: CUSTOM_TOOL_DEVELOPMENT.md  CUSTOM_TOOL_DEVELOPMENT_AI.md  CUSTOM_TOOL_DEVELOPMENT_zh-CN.md  MCP_SERVER.md  MODES&CLI.md  MODES&CLI_zh-CN.md  modes&cli.md  modes&cli_zh-CN.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
skills/: SKILL.md
tests/: test_account_pool.py  test_action_executor.py  test_backend_packaging.py  test_case_synchronizer.py  test_cc_mini_browser_port.py  test_cc_mini_event_loop.py  test_cc_mini_executor.py  test_cc_mini_post_action.py  test_cc_mini_report.py  test_cc_mini_report_adapter.py  test_cc_mini_screenshots.py  test_cc_mini_skills.py  test_cc_mini_tool_resolve.py  test_cli_cc_mini.py  test_crawler.py  test_error_classifier.py  test_file_library.py  test_generate_html_from_report.py  test_loading_animation.py  test_schema_utils.py  test_status_determination.py  test_url_validator.py
webqa_agent/: Dockerfile  __init__.py  cli.py  package.json  requirements.txt
(+279 files in other folders)
