[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webqa-agent"
version = "0.2.1"
description = "WebQA Agent is an autonomous web browser agent that audits performance, functionality & UX for engineers and vibe-coding creators."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "MigoXLab"}
]
keywords = ["web", "qa", "testing", "automation", "playwright", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "html2text>=2025.4.15",
    "jinja2>=3.1.6",
    "langchain==0.3.26",
    "langchain-core==0.3.68",
    "langchain-openai==0.3.27",
    "langgraph==0.5.1",
    "langgraph-checkpoint==2.1.0",
    "openai>=1.93.0",
    "pillow==11.3.0",
    "playwright==1.52.0",
    "pydantic==2.9.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "typing-extensions==4.14.0",
]

[project.scripts]
webqa-agent = "webqa_agent.cli:main"

[project.urls]
Homepage = "https://github.com/MigoXLab/webqa-agent"
Repository = "https://github.com/MigoXLab/webqa-agent"
Documentation = "https://github.com/MigoXLab/webqa-agent#readme"
Issues = "https://github.com/MigoXLab/webqa-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["webqa_agent*", "app_gradio*"]

[tool.setuptools.package-data]
webqa_agent = ["static/*", "static/**/*", "crawler/js/*"]
app_gradio = ["*.json"]
